# doug

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
doug/: __init__.py  __main__.py  ai_query.py  cache_manager.py  cli.py  config.py  context_generator.py  indexer.py  mcp_server.py  setup_wizard.py
doug/plugins/: __init__.py  base.py  confluence_plugin.py  jira_plugin.py  playwright_base.py
doug/rag/: __init__.py  indexers.py  rag_engine.py
tests/: test_ai_query.py  test_cache_manager.py  test_cli.py  test_config.py  test_context_generator.py  test_indexer.py  test_integration.py  test_mcp_server.py
